--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -2,18 +2,36 @@
 <ul class="sidebar navbar-nav" style="min-height: 100vh;">
     <li class="nav-item active">
         <%= link_to spots_path, class: "nav-link" do %>
-            <i class="fa fa-building"></i>&nbsp;
+            <i class="fas fa-building"></i>&nbsp;
             <span>Lugares</span>
         <% end %>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="charts.html">
-
-            <span>Charts</span></a>
+            <i class="fas fa-list-ol"></i>&nbsp;
+            <span>Tarefas</span>
+        </a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="tables.html">
-            
-            <span>Tables</span></a>
+            <i class="fas fa-users"></i>&nbsp;
+            <span>Usuários</span>
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="tables.html">
+            <i class="fas fa-chart-area"></i>&nbsp;
+            <span>Relatórios</span>
+        </a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="tables.html">
+        <i class="fas fa-address-card"></i>&nbsp;
+        <span>Administradores</span></a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="tables.html">
+        <i class="fas fa-sign-out-alt"></i>&nbsp;
+        <span>Sair</span></a>
     </li>
 </ul>
