--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,11 +1,151 @@
 <%= form_for @spot, url: spots_path, method: :post do |f| %>
-  <br/>
-  <%= f.label :name, "Nome: " %><br />
-  <%= f.text_field :name %>
-  <br/>
-  <%= f.label :clean_type, "Tipo de limpeza: " %><br />
-  <%= select_tag(:clean_type, options_for_select([ ['Leve', 1], ['Pesado', 2], ['Muito pesado', 3] ]) ) %>
-  <br/>
+  
+ 
+  
+  
+  <div class="form-row">
+  
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+      <%= f.label :name, "Nome do local: " %>
+      <%= f.text_field :name, placeholder: "Nome do local", class: "form-control" %>
+    </div>
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+      <%= f.label :governance, "Orgão: " %>
+      <%= f.text_field :governance, value: "Prefeitura de Fortaleza",placeholder: "Nome do local", class: "form-control", readonly: "readonly" %>
+    </div>
 
 
+    <div class="form-group col-sm-12 col-md-11 offset-md-1 col-lg-9">
+      <%= f.label :tasks, "Tarefas: " %>
+      <select class="selectpicker form-control" multiple data-live-search="true" name="spot[tasks][]">
+        <% @tasks.each do |t| %>
+          <option value="<%= t.id %>"><%= t.name %></option>
+        <% end %>
+      </select>
+    </div>
+
+
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4 ">
+      <%= f.label :clean_type, "Dias de limpeza leve: " %>
+      <%# select_tag(:clean_type, options_for_select([ ['Leve', 1], ['Pesado', 2], ['Muito pesado', 3] ]), class: "form-control" ) %>
+
+      <select class="selectpicker form-control" multiple data-live-search="true" name="spot[light_cleaning][]">
+        <option value="2">Segunda</option>
+        <option value="3">Terça</option>
+        <option value="4">Quarta</option>
+        <option value="5">Quinta</option>
+        <option value="6">Sexta</option>
+        <option value="7">Sábado</option>
+        <option value="8">Domingo</option>
+      </select>
+    </div>
+      
+    
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4 ">
+      <%= f.label :clean_type, "Dias de limpeza pesada: " %>
+
+      <select class="selectpicker form-control" multiple data-live-search="true" name="spot[heavy_cleaning][]">
+        <option value="2">Segunda</option>
+        <option value="3">Terça</option>
+        <option value="4">Quarta</option>
+        <option value="5">Quinta</option>
+        <option value="6">Sexta</option>
+        <option value="7">Sábado</option>
+        <option value="8">Domingo</option>
+      </select>
+    </div>
+
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+      <%= f.label :status, "Status: " %> <br/>
+      <%= f.select :status, [["A fazer","0"],["Aguardando verificação", "1"], ["Completado", "2"], ["Tarefas pendentes","3"] ], {include_blank: "Selecione"}, { :class => 'form-control' } %>
+    </div>
+
+    <div class="form-group col-sm-6 offset-md-1 col-md-2 col-lg-2">
+      <%= f.label :lat, "Latitude: " %>
+      <%= f.text_field :lat, class: "form-control" %>
+    </div>
+
+    <div class="form-group col-sm-6 ml-md-auto ml-lg-0 col-md-2 col-lg-2">
+      <%= f.label :long, "Longitude: " %>
+      <%= f.text_field :long, class: "form-control" %>
+    </div>
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+      <%= f.label :photo, "Foto do local: " %>
+      <div class="custom-file">
+      <%= f.file_field :photo, class: "custom-file-input", id: "customFile" %>
+      <label class="custom-file-label" for="customFile">Selecionar Arquivo</label>
+      </div>
+    </div>
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+     
+    </div>
+
+    <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+      <%= f.label :user, "Zelador responsável: " %><br/>
+      <%= f.select :user_id, @caretakers.collect {|c| [ c.name, c.id ] }, {include_blank: 'Nenhum'}, {class: "form-control"} %>
+    </div>
+      
+    
+      
+
+    </div> <!-- div.form-row -->
+
+    <div class="row">
+      <div class="col-12 mt-4" style="text-align: center;">
+        <%# link_to "Voltar", spots_path, class: "btn btn-primary mr-5" %>
+        <%= f.submit "Salvar", class: "px-4 btn btn-primary" %>
+      </div>
+    </div>
+
+
+
+  
 <% end %>
+
+<script>
+ $(document).ready(function() {
+   $('.selectpicker').selectpicker();
+
+  $('#customFile').on('change',function(){
+    var filePath = $(this).val();
+    filePath = filePath.split("\\");
+    $(this).next('.custom-file-label').html(filePath[filePath.length-1]);
+  })
+
+ });
+
+var options;
+$.get( "/autocomplete/tasks", function( data ) {
+
+  $('#tasks').autocomplete({
+    lookup: function (query, done) {
+        // Do Ajax call or lookup locally, when done,
+        // call the callback and pass your results:
+        var result = {
+            suggestions: data
+        };
+
+        done(result);
+    },
+    onSelect: function (suggestion) {
+        alert('You selected: ' + suggestion.value + ', ' + suggestion.data);
+    }
+  });
+});
+
+
+
+
+  
+  
+  
+
+
+
+</script>
