--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -1,38 +1,42 @@
 <!-- Sidebar -->
 <ul class="sidebar navbar-nav" style="min-height: 100vh;">
-    <li class="nav-item active">
-        <%= link_to spots_path, class: "nav-link" do %>
-            <i class="fas fa-building"></i>&nbsp;
-            <span>Lugares</span>
-        <% end %>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-            <i class="fas fa-list-ol"></i>&nbsp;
-            <span>Tarefas</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-users"></i>&nbsp;
-            <span>Usuários</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-chart-area"></i>&nbsp;
-            <span>Relatórios</span>
-        </a>
-    </li>
-    <li class="nav-item">
-    <a class="nav-link" href="tables.html">
-        <i class="fas fa-address-card"></i>&nbsp;
-        <span>Administradores</span></a>
-    </li>
-    <li class="nav-item">
-    <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link" do  %>
-        <i class="fas fa-sign-out-alt"></i>&nbsp;
-        <span>Sair</span>
+  <li class="logo d-block">
+    <%= image_tag("logo-horizontal", class: "logo-menu p-1 d-none d-md-block") %>
+    <%# image_tag("logo-horizontal", class: ".d-sm-block .d-md-none") %>
+  </li>
+  <li class="nav-item <%= 'active' if controller_name == 'spots' %> ">
+    <%= link_to spots_path, class: "nav-link" do %>
+    <i class="fas fa-building"></i>&nbsp;
+    <span>Locais</span>
     <% end %>
+  </li>
+  <li class="nav-item <%= 'active' if controller_name == 'tasks' %>">
+    <%= link_to tasks_path, class: "nav-link" do %>
+    <i class="fas fa-list-ol"></i>&nbsp;
+    <span>Tarefas</span>
+    <% end %>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="tables.html">
+      <i class="fas fa-chart-area"></i>&nbsp;
+      <span>Relatórios</span>
+    </a>
+  </li>
+  <li class="nav-item <%= 'active' if controller_name == 'users' %>">
+    <%= link_to users_path, class: "nav-link" do %>
+    <i class="fas fa-users"></i>&nbsp;
+    <span>Usuários</span>
+    <% end %>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="tables.html">
+      <i class="fas fa-address-card"></i>&nbsp;
+      <span>Administradores</span></a>
     </li>
-</ul>
+    <li class="nav-item">
+      <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link" do  %>
+      <i class="fas fa-sign-out-alt"></i>&nbsp;
+      <span>Sair</span>
+      <% end %>
+    </li>
+  </ul>
