--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-5">
-<%= link_to new_spot_path, class: "ml-2 tableBt" do %>
+<%= link_to new_spot_path, class: "ml-2 tableBt float-sm-right" do %>
   <i class="fa fa-plus"></i> Novo Lugar
 <% end %>
 <table class="pull-up display responsive no-wrap" id="spots_table">
@@ -8,7 +8,7 @@
       <th class="nosort"></th>
       <th>Nome</th>
       <th>Status</th>
-      <th class="nosort">Ações</th>
+      <th class="nosort"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,9 +16,91 @@
     <tr>
       <td></td>
       <td><%= s.name %></td>
-      <td><%= s.status %></td>
-      <td></td>
+      <td><%= s.status_name %></td>
+      <td>
+        <%= link_to "#" do %><i class="far fa-eye" data-toggle="modal" data-target="#modal<%=s.id%>"></i><% end %>
+        <%= link_to edit_spot_path(s) do %><i class="ml-0 ml-md-1 ml-lg-3 fas fa-edit"></i><% end %>
+        <%= link_to spot_path(s), method: :delete, 'data-confirm': "Você tem certeza que deseja excluir esse local?", 'data-method': "delete" do %><i class="ml-0 ml-md-1 ml-lg-3 far fa-trash-alt"></i><% end %>
+      </td>
     </tr>
+
+    <!-- Modal -->
+    <div class="modal fade bd-example-modal-lg" id="modal<%=s.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel"><%= s.name %></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+
+                <div class="col-12">
+                    Reponsável: <%= s.user.name unless s.user.blank? %>
+                </div>
+              </div>
+              <div class="row mt-2">
+
+                <div class="col-6">
+                  Status: <%= s.status_name %>
+                </div>
+
+                <div class="col-6">
+                  Orgão: <%= s.governance %>
+                </div>
+
+              </div>
+              <div class="row mt-2">
+
+                <div class="col-6">
+                  Limpeza leve: <%=  s.name_of_days(s.light_cleaning) unless s.light_cleaning.blank? %>
+                </div>
+
+                <div class="col-6">
+                  Limpeza pesada: <%=  s.name_of_days(s.heavy_cleaning) unless s.heavy_cleaning.blank? %>
+                </div>
+
+              </div>
+
+              <div class="row mt-2">
+                <div class="col-12">
+                Tarefas:
+                  <div id="tasks">
+                  <% s.tasks.each do |t| %>
+                    <%= t.name %><% if t != s.tasks.last %>,<% end %>
+                  <% end %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row mt-2">
+                <div class="col-6">
+                  Latitude: <%= s.lat %>
+                  <div class="mt-2">
+                    Longitude: <%= s.long %>
+                  </div>
+                </div>
+
+                <div class="col-6">
+                    <!-- MAPA -->
+                </div>
+              </div>
+
+
+            </div>
+
+
+
+          </div>
+          <div class="modal-footer">
+            <%= link_to "Editar", edit_spot_path(s), class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
+    </div>
     <% end %>
   </tbody>
 </table>
@@ -36,7 +118,10 @@ $('#spots_table').DataTable({
     'bSortable': false,
     'aTargets': ['nosort']
   }],
-  "order": [[ 1, "asc" ]]
+  "order": [[ 0, "asc" ]],
+  "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.19/i18n/Portuguese-Brasil.json"
+        }
 });
 
 </script>
