crud spots, tasks e users(exceto editar) concluidos

--- a/app/assets/stylesheets/spots.scss
+++ b/app/assets/stylesheets/spots.scss
@@ -6,3 +6,13 @@
 #tasks {
   display: inline;
 }
+
+.spotImg {
+  max-width: 100%;
+  height: auto;
+}
+
+.spotImgModal {
+  max-width: 60%;
+  height: auto;
+}
