--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,6 +41,7 @@ input:-webkit-autofill:active {
 input:focus {
     box-shadow: none !important;
     border-color: #ced4da !important;
+    outline: none;
 }
 
 .btn-primary {
@@ -129,7 +130,8 @@ a.paginate_button.current {
 
   img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 95px;
+    min-height: 95px;
   }
 }
 .img-container .overlay{
@@ -143,7 +145,7 @@ a.paginate_button.current {
   transition:opacity 500ms ease-in-out;
 }
 .img-container:hover .overlay{
-  opacity:1;
+  opacity: .9;
 
   span:hover {
     cursor: pointer;
