--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -47,13 +47,29 @@
                 </div>
 
                 <div class="col-6 col-lg-3">
-                  Tipo: <%= s.role %>
+                  Tipo: <%= s.role_br %>
                 </div>
-
 
               </div>
               <div class="row mt-2">
+                <div class="col-12">
+                  Responsável por: <div>
+                  <% s.spots.each do |spot| %>
 
+                    <div class="img-container m-2">
+                      <% if spot.photo.present? %>
+                      <img src="<%= spot.photo %>">
+                      <% else %>
+                      <img src=""> <!-- TODO No image avaliable -->
+                      <% end %>
+                      <div class="overlay">
+                        <span><%= link_to spot.name, edit_spot_path(spot) %></span>
+                      </div>
+                    </div>
+
+                  <% end %>
+                  </div>
+                </div>
 
 
 
