--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -32,6 +32,6 @@
   }
 
   if(alert != '' && alert != undefined) {
-    iziToast.error({message: notice});
+    iziToast.error({message: alert});
   }
 </script>
