--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -24,14 +24,15 @@
   </li>
   <li class="nav-item <%= 'active' if controller_name == 'users' %>">
     <%= link_to users_path, class: "nav-link" do %>
-    <i class="fas fa-users"></i>&nbsp;
-    <span>Usuários</span>
+      <i class="fas fa-users"></i>&nbsp;
+      <span>Usuários</span>
     <% end %>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="tables.html">
+  <li class="nav-item <%= 'active' if controller_name == 'admins' %>">
+    <%= link_to admins_path, class: "nav-link" do %>
       <i class="fas fa-address-card"></i>&nbsp;
       <span>Administradores</span></a>
+    <% end %>
     </li>
     <li class="nav-item">
       <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link" do  %>
