--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <th>Nome</th>
       <th>Tipo</th>
       <th>Qtde. locais</th>
-      <th class="nosort"></th>
+      <th class="nosort">Ações</th>
     </tr>
   </thead>
   <tbody>
@@ -63,7 +63,7 @@
                       <img src=""> <!-- TODO No image avaliable -->
                       <% end %>
                       <div class="overlay">
-                        <span><%= link_to spot.name, edit_spot_path(spot) %></span>
+                        <span><%= spot.name %></span>
                       </div>
                     </div>
 
