traducoes e consertos nas views e controllers e validacoes no back

--- a/app/views/spots/_form.html.erb
+++ b/app/views/spots/_form.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 <%= form_for @spot,  html: { multipart: true, id: "spot_form" } do |f| %>
 
-  <div class="form-row">
+  <div class="form-row mt-5">
 
     <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
       <%= f.label :name, "Nome do local: " %>
