--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @task do |f| %>
 
-  <div class="form-row">
+  <div class="form-row mt-5">
 
     <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
       <%= f.label :name, "Nome da tarefa: " %>
