--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,14 +41,14 @@
           <div class="row">
 
             <div class="col-12">
-              Descrição: <%= s.description %>
+              <b>Descrição:</b> <%= s.description %>
             </div>
 
           </div>
           <div class="row mt-2">
 
             <div class="col-12">
-              Locais: <div>
+              <b>Locais:</b> <div>
               <% s.spots.each do |spot| %>
 
               <div class="img-container m-2">
