--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -169,3 +169,10 @@ a.paginate_button.current {
   }
 
 }
+
+canvas{
+
+    max-width: 800px !important;
+    max-height: 480px !important;
+  
+  }
