--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,12 +4,12 @@
 
     <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
       <%= f.label :name, "Nome da tarefa: " %>
-      <%= f.text_field :name, placeholder: "Nome da tarefa", class: "form-control", required: "required" %>
+      <%= f.text_field :name, placeholder: "Nome da tarefa", class: "form-control" %>
     </div>
 
     <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
       <%= f.label :description, "Descrição: " %>
-      <%= f.text_field :description, required: "required", placeholder: "Descrição e detalhes da tarefa", class: "form-control" %>
+      <%= f.text_field :description, placeholder: "Descrição e detalhes da tarefa", class: "form-control" %>
     </div>
 
 
@@ -17,7 +17,7 @@
     <div class="form-group col-sm-12 col-md-11 offset-md-1 col-lg-9">
     <%= f.label :spots, "Locais: " %>
 
-      <select class="selectpicker form-control" multiple data-live-search="true" required="required" name="spot_ids[]" id="input_spots">
+      <select class="selectpicker form-control" multiple data-live-search="true" name="spot_ids[]" id="input_spots">
         <% @spots.each do |s| %>
           <option value=<%= s.id %>><%= s.name %></option>
         <% end %>
