--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-5">
-<%= link_to new_spot_path, class: "ml-2 tableBt float-sm-right" do %>
-  <i class="fa fa-plus"></i> Novo Lugar
+<%= link_to new_spot_path, class: "ml-2 tableBt float-sm-right btn btn-outline-primary" do %>
+  <i class="fa fa-plus"></i> Novo Local
 <% end %>
 <table class="pull-up display responsive no-wrap" id="spots_table">
   <thead>
