--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -34,7 +34,7 @@
 
 
     <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
-      <label>Nome do local: </labe>
+      <label>Nome do local: </label>
       <p><%= @spot.name unless @spot.name.blank? %><p>
     </div>
 
