--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-5">
-<%= link_to new_task_path, class: "ml-2 tableBt" do %>
+<%= link_to new_task_path, class: "ml-2 tableBt btn btn-outline-primary" do %>
   <i class="fa fa-plus"></i> Nova Tarefa
 <% end %>
 <table class="pull-up display responsive no-wrap" id="tasks_table">
