--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -5,6 +5,10 @@
  $(document).ready(function() {
   $('.selectpicker').selectpicker();
 
+  $("#task_name").attr('required', true);
+  $("#task_description").attr('required', true);
+  
+
  });
 
 </script>
