--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-5">
-<%= link_to new_user_path, class: "ml-2 tableBt float-sm-right" do %>
+<%= link_to new_user_path, class: "ml-2 tableBt float-sm-right btn btn-outline-primary" do %>
   <i class="fa fa-plus"></i> Novo Usuário
 <% end %>
 <table class="pull-up display responsive no-wrap" id="users_table">
