--- a/app/assets/stylesheets/spots.scss
+++ b/app/assets/stylesheets/spots.scss
@@ -8,11 +8,21 @@
 }
 
 .spotImg {
-  max-width: 100%;
+  max-width: 180px;
+  max-height: 135px;
   height: auto;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .spotImgModal {
-  max-width: 60%;
+  max-width: 320px;
+  max-height: 240px;
   height: auto;
+  width: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
