--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @admin, class: "confirm_pass" do |f| %>
 
-    <div class="form-row">
+    <div class="form-row mt-5">
 
         <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
         <%= f.label :name, "Nome: " %>
@@ -13,13 +13,18 @@
         </div>
 
         <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
-        <%= f.label :password, "Senha: " %>
-        <%= f.password_field :password, placeholder: "Senha", class: "form-control", id: "password" %>
+        <%= f.label :current_password, "Senha atual: " %>
+        <%= f.password_field :current_password, placeholder: "Senha atual", class: "form-control", id: "password" %>
+        </div>
+
+        <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
+        <%= f.label :password, "Nova senha: " %>
+        <%= f.password_field :password, placeholder: "Nova senha", class: "form-control", id: "password" %>
         </div>
 
         <div class="form-group col-sm-12 col-md-5 offset-md-1 col-lg-4">
         <%= f.label :password_confirmation, "Confirmar senha: " %>
-        <%= f.password_field :password_confirmation, placeholder: "Confirmar senha", class: "form-control", id: "password_confirmation" %>
+        <%= f.password_field :password_confirmation, placeholder: "Confirmar nova senha", class: "form-control", id: "password_confirmation" %>
         </div>
 
 
