--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -4,6 +4,12 @@
     <%= image_tag("logo-horizontal", class: "logo-menu p-1 d-none d-md-block") %>
     <%# image_tag("logo-horizontal", class: ".d-sm-block .d-md-none") %>
   </li>
+  <hr class="d-none d-sm-block">
+  <div id="side_perfil" class="d-none d-sm-block">
+    <span><%= current_admin.abr_name %></span><br/>
+    <i class="fas fa-edit"></i> <%= link_to "Editar perfil", edit_profile_path %>
+  </div>
+  <hr class="d-none d-sm-block">
   <li class="nav-item <%= 'active' if controller_name == 'spots' %> ">
     <%= link_to spots_path, class: "nav-link" do %>
     <i class="fas fa-building"></i>&nbsp;
@@ -16,12 +22,26 @@
     <span>Tarefas</span>
     <% end %>
   </li>
-  <li class="nav-item <%= 'active' if controller_name == 'reports' %>">
-  <%= link_to reports_path, class: "nav-link" do %>
-      <i class="fas fa-chart-area"></i>&nbsp;
-      <span>Relatórios</span>
-  <% end %>
+
+
+  <li class="nav-item">
+    <div class="dropdown">
+      <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-chart-area"></i> Relatórios
+      </a>
+      <div class="menuDrop dropdown-menu <%= 'show' if controller_name == 'reports' %>" aria-labelledby="dropdownMenuLink">
+        <%= link_to spots_reports_path, class: "dropdown-item #{action_name == 'spots_index' ? 'active' : '' }" do %>
+          <i class="far fa-file-alt"></i> Locais
+        <% end %>
+        <%= link_to caretakers_reports_path, class: "dropdown-item mt-2 #{action_name == 'caretakers_index' ? 'active' : '' }"  do %>
+          <i class="far fa-file-alt"></i> Zeladores
+        <% end %>
+        <!-- Dropdown menu links -->
+      </div>
+    </div>
   </li>
+
+
   <li class="nav-item <%= 'active' if controller_name == 'users' %>">
     <%= link_to users_path, class: "nav-link" do %>
       <i class="fas fa-users"></i>&nbsp;
